--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+@import url('<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap" rel="stylesheet">');
+
+body, html{
+  margin:0;
+  padding:0;
+  font-family: 'Josefin Sans', sans-serif;
+  background: rgb(0, 51, 51);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+ box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
+
+main{
+  padding-top: 20vh;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: grid;
+  place-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+button, .button{
+    background-color: rgb(0, 42, 42);
+    cursor: pointer;
+    color: whitesmoke;
+    min-width: 6rem;
+    padding: .6rem;
+    display: block;
+    border: none;
+    margin-bottom: 10px;
+    font-size: .8rem;
+    box-shadow:  2px 2px 7px rgb(0, 34, 34);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button{
+  border: none;
+  padding: .4rem;
+  padding: .4rem;
+  max-width: 6rem;
+  text-align: center;
+  font-size: 1rem;
+  
 }
+
+
+
+a{
+  text-decoration: none;
+  color: rgb(250, 232, 30);
+}
+
+div {
+  color: rgb(250, 232, 30);
+}
+
+
