--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,12 @@ body, html{
   margin:0;
   padding:0;
   font-family: 'Josefin Sans', sans-serif;
-  background: rgb(0, 51, 51);
+  background: rgb(0, 25, 25);
 }
 
 *{
  box-sizing: border-box;
 }
-
-
 
 main{
   padding-top: 20vh;
@@ -21,7 +19,7 @@ main{
 }
 
 button, .button{
-    background-color: rgb(0, 42, 42);
+    background-color: rgb(0, 25, 25);
     cursor: pointer;
     color: whitesmoke;
     min-width: 6rem;
@@ -43,15 +41,14 @@ button, .button{
   
 }
 
-
-
 a{
   text-decoration: none;
-  color: rgb(250, 232, 30);
+  color: rgb(255, 162, 36);
+  cursor: pointer;
 }
 
 div {
-  color: rgb(250, 232, 30);
+  color: rgb(255, 162, 36);
 }
 
 
