--- a/src/komponenter/Footer.css
+++ b/src/komponenter/Footer.css
@@ -1,7 +1,7 @@
 footer {
     width: 100vw;
     height: 20vh;
-    background: rgb(0, 42, 42);
+    background: rgb(0, 19, 19);
     display: grid;
     grid-auto-flow: column;
     justify-content: center;
@@ -18,8 +18,8 @@ footer a{
     font-weight: 400;
 }
 
-p{
-    color: rgb(255,215,0);
+.footertekst{
+    color: rgb(255, 162, 36);
     border-width: 1px;
     height: 2px;
     justify-content: center;
@@ -27,6 +27,6 @@ p{
 }
 
 svg.some-icons{
-    color: rgb(255,215,0);
+    color: rgb(255, 162, 36);
     size: 2rem;
 }
