--- a/src/komponenter/Header.css
+++ b/src/komponenter/Header.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100vw;
     height: 15vh;
-    background: (0, 51, 51, 0.8);
+    background: (0, 25, 25);
     color: rgb(250, 250, 250);
     display: grid;
     place-items: center;
@@ -13,7 +13,7 @@ header {
     position: fixed;
     width: 100vw;
     height: 10vh;
-    background: rgb(0, 51, 51, 0.8);
+    background: rgb(0, 25, 25);
     display: grid;
     grid-auto-flow: column;
     justify-content: left;
@@ -33,12 +33,12 @@ header {
 header a{
     text-decoration: none;
     font-weight: 400;
-    color: rgb(0, 31, 31);
+    color: rgba(255, 162, 36, 0.301);
 }
 
 [aria-current='page'], .active {
     font-weight: 700;
-    color: rgb(250, 232, 30);
+    color: rgb(255, 162, 36);
 }
 
 header img{
@@ -66,7 +66,7 @@ img{
     }
 
     header.visible{
-        background-color: rgb(3, 55, 55);
+        background-color: rgb(153, 153, 153);
         transform:translateY(0);
     }
     .burger{
