--- a/src/komponenter/ProjectDetails.css
+++ b/src/komponenter/ProjectDetails.css
@@ -23,6 +23,7 @@ main.project-detail{
     color: rgb(255, 162, 36);
     place-items: center;
     justify-content: center;
+    font-size: 4rem;
 }
 
 .project-detail .project-images{
